ml-dft-sandia/descriptors/python_ctypes/test_library.h

#ifdef __cplusplus
extern "C" {
#endif

  void hello_world();
  double** create_matrix(int, int);
  void destroy_matrix(double**);

#ifdef __cplusplus
}
#endif